# ce-lang

./: .gitignore  LICENSE  Makefile  README.md  ce.opam  dune-project
lib/: dune
lib/compiler/: builtin.ml  bytecode.ml  codegen.ml  compiler.ml  debug.ml  dune  generator.ml  infer.ml  linker.ml  opcode.ml  state.ml  substitue.ml  typer.ml  utils.ml
lib/lexer/: dune  lexer.mll
lib/linker/: bytecode.ml  debug.ml  dune  linker.ml
lib/parser/: ast.ml  astype.ml  dune  parser.mly
lib/vm/: bytecode.ml  compiler.ml  debug.ml  dune  linker.ml  opcode.ml  vm.ml
std/: errors.ce  math.ce  mem.ce  slice.ce  slices.ce  std.ce  strings.ce
test/: dune
